--- a/css/biying.css
+++ b/css/biying.css
@@ -612,6 +612,7 @@ h1,h2,h3,h4,h5,h6{
 	margin-left:15px;
 	height:284px;
 	background: #fff;
+	overflow: hidden;
 }
 .category-recommend-3 ul li a{
 	display:block;
@@ -730,6 +731,7 @@ h1,h2,h3,h4,h5,h6{
 	display:block;
 	width:423px;
 	height:284px;
+	overflow: hidden;
 }
 .category-recommend-4 ul li a:hover{
 	box-shadow: 1px 2px 10px 4px rgba(0,0,0,.05);
