--- a/css/biying.css
+++ b/css/biying.css
@@ -354,8 +354,11 @@ h1,h2,h3,h4,h5,h6{
 }
 .list-main .list-con1 .list-con1-son div li a{
 	font-size:12px;
-	color:#333;
+	color:#808080;
 	text-align:center;
+}
+.list-main .list-con1 .list-con1-son div li a:hover{
+	color:#523669;
 }
 
 .list-main .list-con1 .list-con1-son #box2{
@@ -371,8 +374,11 @@ h1,h2,h3,h4,h5,h6{
 }
 .list-main .list-con1 .list-con1-son #box2 li a{
 	font-size:12px;
-	color:#333;
+	color:#808080;
 	text-align:center;
+}
+.list-main .list-con1 .list-con1-son #box2 li a:hover{
+	color:#523669;
 }
 
 .list-main .list-con1 li:nth-child(2) i{
@@ -520,6 +526,7 @@ h1,h2,h3,h4,h5,h6{
 	height:48px;
 	background: url(../img/rightBar-top.png) no-repeat;
 	display: none;
+	cursor: pointer;
 }
 .rightBar-top:hover{
 	background: url(../img/rightBar-topActive.png) no-repeat;
