--- a/public-list.css
+++ b/public-list.css
@@ -205,10 +205,193 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
+/*rightBar*/
+#rightBar{
+	width:48px;
+	height:144px;
+	
+	position: fixed;
+	top:384px;
+	left:1192px;
+}
+.rightBar-share{
+	width: 48px;
+	height:48px;
+	background:;
+	cursor: pointer;
+	background:url(img/rightBar-share.png);
+}
+.rightBar-share:hover{
+	background:url(img/rightBar-shareActive.png);
+}
+
+.rightBar-code{
+	width: 48px;
+	height:48px;
+	background:url(img/rightBar-code.png) no-repeat;
+	cursor: pointer;
+	position: relative;
+}
+.rightBar-code:hover{
+	background:url(img/rightBar-codeActive.png) no-repeat;
+}
+.rightBar-code div{
+	position: absolute;
+	top:-65px;
+	left:-310px;
+	width:301px;
+	height:179px;
+	border-radius:4px ;
+	box-shadow: 0 1px 10px 4px rgba(0,0,0,.05);
+	display: none;
+	background: #fff;
+}
+.rightBar-code span{
+	position: absolute;
+	top:42%;
+	right:-15px;
+	background:url(img/right-triangle.png) no-repeat;
+	width:15px;
+	height:30px;
+	background-size: 100% 100%;
+}
+.rightBar-code .code-app{
+	float:left;
+	margin:7px 0 0 3px;
+}
+.rightBar-code .code-app dt{
+	width:130px;
+	height:130px;
+	background:url(img/app.png) no-repeat;
+	background-size:100% 100% ;
+	
+}
+.rightBar-code .code-app dd{
+	font-size: 14px;
+	color:#523669;
+	text-align: center;
+	margin-top:5px;
+}
+
+.rightBar-code dl{
+	float:left;
+	
+}
+.rightBar-code dt{
+	width:143px;
+	height:143px;
+	background:url(img/wxCode.jpg) no-repeat;
+	background-size:100% 100% ;
+	margin:6px 0 0 6px;
+}
+.rightBar-code dd{
+	font-size: 14px;
+	color:#523669;
+	text-align: center;
+}
+
+.rightBar-top{
+	width: 48px;
+	height:48px;
+	background: url(img/rightBar-top.png) no-repeat;
+	display: none;
+	cursor: pointer;
+}
+.rightBar-top:hover{
+	background: url(img/rightBar-topActive.png) no-repeat;
+}
+
+/*shareCon分享弹框*/
+#shareCon{
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	z-index: 110;
+	background:rgba(0,0,0,.5);;
+	display: none;
+}
+#shareCon-box{
+	width:490px;
+	height:233px;
+	position:absolute;
+	top:50%;
+	left:50%;
+	background:#fff;
+	margin-left:-245px;
+	margin-top:-115px;
+}
+#shareCon-box .share{
+	width:450px;
+	height:40px;
+	border-bottom:1px dashed #ccc;
+	font-size:18px;
+	line-height:40px;
+	margin-left:20px;
+}
+#shareCon-box .share b{
+	display: block;
+	width:16px;
+	height:16px;
+	background:url(img/cls_btn.png);
+	float:right;
+	margin:14px 5px 0 0;
+	cursor:pointer;
+}
+#shareCon-box .share-con{
+	width:450px;
+	height:152px;
+	margin:15px 0 0 20px;
+}
+#shareCon-box .share-con .share-code{
+	width:145px;
+	height:152px;
+	float:left;
+	border-right:1px solid #ccc;
+}
+#shareCon-box .share-con .share-code .code-pic{
+	width:120px;
+	height:120px;
+	margin-top:12px;
+}
+#shareCon-box .share-con .share-code .code-text{
+	font-size:12px;
+	color:#666;
+	height:16px;
+	line-height:16px;
+}
+#shareCon-box .share-con .share-app{
+	/*width:304px;*/
+	height:152px;
+	float:left;
+}
+#shareCon-box .share-con .share-app>.app-list{
+	height:112px;
+	margin-top:40px;
+}
+#shareCon-box .share-con .share-app .app-list .app{
+	height:112px;
+	float:left;
+	margin-left:13px;
+}
+#shareCon-box .share-con .share-app .app-list .app .app-link{
+	width:50px;
+	height:50px;
+}
+#shareCon-box .share-con .share-app .app-list .app .app-name{
+	display: block;
+	height:12px;
+	color:#666;
+	line-height:12px;
+	margin-top:19px;
+}
+
 /*main-list*/
 #main-list{
-	min-height:612px;
+	min-height:2322px;
 	background:#f9f9f9;
+	padding-bottom:60px;
 }
 .main-list0{
 	min-height:612px;
@@ -251,7 +434,6 @@ h1,h2,h3,h4,h5,h6{
 	width:1080px;
 	height:50px;
 	background:#fff;
-	margin-bottom:44px;
 	float:left;
 }
 #list-classify span{
@@ -273,12 +455,16 @@ h1,h2,h3,h4,h5,h6{
 	line-height:50px;
 	float:left;
 	margin-left:30px;
+	cursor: pointer;
+}
+#list-classify .classify-link:hover{
+	color:#523669;
 }
 #list-info{
 	float:left;
 	width:1080px;
 	/*min-height:500px;*/
-	background: greenyellow;
+	/*background: greenyellow;*/
 }
 #list-info .list-info-title{
 	height:24px;
@@ -286,40 +472,40 @@ h1,h2,h3,h4,h5,h6{
 	font-size:24px;
 	color:#333;
 	text-align: center;
-	margin-bottom:22px;
+	margin:44px 0 22px 0;
 }
 #list-info .shop-list{
-		
+	width:1080px;
+	min-height:454px;
 }
-.shop-list > li{
+.shop-list li{
 	width:255px;
 	height:335px;
 	float:left;
-	margin-right:20px;
+	margin:0 8px 40px 7px;
 	margin-bottom:20px;
-
 }
-.shop-list > li >a{
+.shop-list>li>a{
 	display: block;
 	width:255px;
 	height:335px;
 	overflow: hidden;
 	background:#fff;
 }
-.shop-list > li > a:hover{
+.shop-list>li>a:hover{
 	box-shadow: 1px 2px 10px 4px rgba(0,0,0,.05);
 	transition: box-shadow 0.2s ease-in-out 0s;
 }
-.shop-list > li > a > img{
+.shop-list>li>a>img{
 	width:255px;
 	height:255px;
-	transition:transform 0.5s ease-in-out 0s;
+	transition:transform 0.2s ease-in-out 0s;
 }
-.shop-list > li > a > img:hover{
+.shop-list>li>a:hover img{
 	transform: scale3d(1.03,1.03,1);
 }
 
-.shop-list > li > a > p{
+.shop-list>li>a>p{
 	width:255px;
 	height:16px;
 	font-size:16px;
@@ -327,11 +513,11 @@ h1,h2,h3,h4,h5,h6{
 	text-align: center;
 	
 }
-.shop-list > li > a > .name{
+.shop-list>li>a>.name{
 	color:#333;
 	margin-top:20px;
 }
-.shop-list > li > a > .price{
+.shop-list>li>a>.price{
 	color:#ff3333;
 	margin-top:12px;
 }
@@ -348,7 +534,7 @@ h1,h2,h3,h4,h5,h6{
 	height:439px;
 	background:#fff;
 	float:left;
-	margin:60px 0 0 92px;
+	margin-left:92px;
 }
 .footer0 .up{
 	width:1080px;
