--- a/css/page.css
+++ b/css/page.css
@@ -206,15 +206,110 @@ h1,h2,h3,h4,h5,h6{
 	color:#808080;
 }
 
+/*rightBar*/
+#rightBar{
+	width:48px;
+	height:144px;
+	
+	position: fixed;
+	top:384px;
+	left:1192px;
+}
+.rightBar-serve{
+	width: 48px;
+	height:48px;
+	cursor: pointer;
+	background:url(../img/rightBar-serve.png) no-repeat;
+}
+.rightBar-serve:hover{
+	background:url(../img/rightBar-serveActive.png) no-repeat;
+}
+
+.rightBar-code{
+	width: 48px;
+	height:48px;
+	background:url(../img/rightBar-code.png) no-repeat;
+	cursor: pointer;
+	position: relative;
+}
+.rightBar-code:hover{
+	background:url(../img/rightBar-codeActive.png) no-repeat;
+}
+.rightBar-code div{
+	position: absolute;
+	top:-65px;
+	left:-310px;
+	width:301px;
+	height:179px;
+	border-radius:4px ;
+	box-shadow: 0 1px 10px 4px rgba(0,0,0,.05);
+	display: none;
+	background: #fff;
+}
+.rightBar-code span{
+	position: absolute;
+	top:42%;
+	right:-15px;
+	background:url(../img/right-triangle.png) no-repeat;
+	width:15px;
+	height:30px;
+	background-size: 100% 100%;
+}
+.rightBar-code .code-app{
+	float:left;
+	margin:7px 0 0 3px;
+}
+.rightBar-code .code-app dt{
+	width:130px;
+	height:130px;
+	background:url(../img/app.png) no-repeat;
+	background-size:100% 100% ;
+	
+}
+.rightBar-code .code-app dd{
+	font-size: 14px;
+	color:#523669;
+	text-align: center;
+	margin-top:5px;
+}
+
+.rightBar-code dl{
+	float:left;
+	
+}
+.rightBar-code dt{
+	width:143px;
+	height:143px;
+	background:url(../img/wxCode.jpg) no-repeat;
+	background-size:100% 100% ;
+	margin:6px 0 0 6px;
+}
+.rightBar-code dd{
+	font-size: 14px;
+	color:#523669;
+	text-align: center;
+}
+
+.rightBar-top{
+	width: 48px;
+	height:48px;
+	background: url(../img/rightBar-top.png) no-repeat;
+	display: none;
+	cursor: pointer;
+}
+.rightBar-top:hover{
+	background: url(../img/rightBar-topActive.png) no-repeat;
+}
+
 
 /*main*/
 #main{
-	min-height:6180px;
+	/*min-height:6180px;*/
 	background:#fff;
 }
 .main0{
-	min-height:6180px;
-	background:greenyellow;
+	/*min-height:6180px;*/
+	/*background:greenyellow;*/
 }
 #page-path{
 	width:1080px;
@@ -308,7 +403,6 @@ h1,h2,h3,h4,h5,h6{
 	position: absolute;
 	top:0;
 	left:570px;
-	background:darkcyan;
 	overflow: hidden;
 	display: none;
 }
@@ -368,7 +462,7 @@ h1,h2,h3,h4,h5,h6{
 #page-pic #shop-buy{
 	width:465px;
 	height:465px;
-	background:#07A6DF;
+	background:#fff;
 	position: absolute;
 	top:184px;
 	right:91px;
@@ -421,7 +515,6 @@ h1,h2,h3,h4,h5,h6{
 #page-pic #shop-buy .shop-underwrite{
 	width:465px;
 	height:35px;
-	background:goldenrod;
 }
 #page-pic #shop-buy .shop-underwrite .underwrite-con{
 	width:65px;
@@ -443,7 +536,7 @@ h1,h2,h3,h4,h5,h6{
 #page-pic #shop-buy .glass-borderCor{
 	width:465px;
 	height:52px;
-	background:greenyellow;
+	margin-top:15px;
 }
 #page-pic #shop-buy .glass-borderCor .borderCor-con{
 	width:65px;
@@ -456,7 +549,6 @@ h1,h2,h3,h4,h5,h6{
 #page-pic #shop-buy .glass-borderCor .borderCor-father{
 	width:398px;
 	height:50px;
-	background:darkolivegreen;
 	float:left;
 }
 #page-pic #shop-buy .glass-borderCor .borderCor-father .borderCor-son{
@@ -484,6 +576,7 @@ h1,h2,h3,h4,h5,h6{
 	top:28px;
 	left:28px;
 	cursor:pointer;
+	display:none;
 }
 .hide-info{
 	width:300px;
@@ -527,6 +620,256 @@ h1,h2,h3,h4,h5,h6{
 	margin-left:102px;
 	float:left;
 }
+.range{
+	width:465px;
+	height:49px;
+}
+.range .range-title{
+	width:65px;
+	height:49px;
+	font-size:14px;
+	line-height:49px;
+	color:#333333;
+	float:left;
+}
+.range .range-con{
+	width:398px;
+	height:49px;
+	font-size:14px;
+	color:#333;
+	line-height:49px;
+	float:left;
+}
+.btn{
+	width:398px;
+	height:40px;
+	margin-left:65px;
+}
+.btn .sameSon{
+	width:180px;
+	height:40px;
+	border:0;
+	margin-right:16px;
+	font-size:18px;
+	color:#fff;
+	outline:none;
+	cursor:pointer;
+}
+.btn1{
+	background:#523669;
+}
+.btn2{
+	background:#f7b200;
+}
+
+#page-info{
+	width:1080px;
+
+	overflow: hidden;
+}
+.page-info-top{
+	width:1078px;
+	height:60px;
+	background:#eeecef;
+	border:1px solid #ccc;
+}
+.page-info-top .room-link{
+	display:block;
+	width:240px;
+	height:60px;
+	float:left;
+	border-right:1px solid #ccc;
+}
+.room-link .room{
+	display:block;
+	width:20px;
+	height:60px;
+	background:url(../img/supplier-icon.png) center no-repeat;
+	margin:0 12px 0 76px;
+	float:left;
+	
+}
+.room-link .room-word{
+	height:60px;
+	font-size:16px;
+	color:#333;
+	line-height:60px;
+	float:left;
+}
+.page-info-top .details-assess{
+	width:362px;
+	height:60px;
+	float:left;
+}
+.details-assess .da{
+	width:180px;
+	height:60px;
+	border-right:1px solid #ccc;
+	float:left;
+	font-size:16px;
+	color:#333;
+	line-height:60px;
+	text-align: center;
+	cursor: pointer;
+}
+.page-info-left{
+	width:200px;
+	padding:20px;
+	border-left:1px solid #ccc;
+	border-right:1px solid #ccc;
+	float:left;
+}
+.page-info-left .BR-logo{
+	width:200px;
+	height:78px;
+	position: relative;
+}
+.BR-logo .hide-logoInfo{
+	width:180px;
+	padding:20px 10px 15px;
+	position: absolute;
+	top:88px;
+	left:0px;
+	box-shadow: 0 1px 10px 4px rgba(0,0,0,.05);
+	background:#fff;
+	border-radius:2px;
+	display:none;
+}
+.page-info-left .BR-logo:hover .hide-logoInfo{
+	display:block;
+} 
+
+.BR-logo .hide-logoInfo .logoxj{
+	width:30px;
+	height:15px;
+	background:url(../img/triangle.png) no-repeat;
+	position:absolute;
+	top:-15px;
+	left:24px;
+}
+.BR-logo .hide-logoInfo .BRglass{
+	display:block;
+	width:180px;
+	height:42px;
+	font-size:16px;
+	color:#333;
+	text-align: center;
+	border-bottom:1px solid #f2f2f2;
+}
+.BR-logo .hide-logoInfo .BRglass-con{
+	width:180px;
+	margin-top: 15px;
+    font-size: 12px;
+    color: #333;
+    line-height: 20px;
+}
+
+.BR-logo .logo-href{
+	display:block;
+	width:76px;
+	height:76px;
+	border:1px solid #ccc;
+	float:left;
+}
+.BR-logo .logo-href .logo-picture{
+	width:76px;
+	height:76px;
+}
+.BR-logo .score-word{
+	display: block;
+	width:100px;
+	height:12px;
+	font-size:12px;
+	line-height:12px;
+	color:#333;
+	float:left;
+	margin-left:10px;
+}
+.BR-logo .word1{
+	margin-top:19px;
+}
+.BR-logo .word2{
+	margin-top:15px;
+}
+.BR-logo .score-word .num-color{
+	color:#f7b200;
+}
+.page-info-left .Room-btn{
+	display:block;
+	width:200px;
+	height:40px;
+	background:#f7b200;
+	font-size:16px;
+	color:#fff;
+	text-align: center;
+	line-height:40px;
+	margin-top:20px;
+	cursor: pointer;
+}
+.page-info-left .goodsShow{
+	width:200px;
+}
+.goodsShow .goodsShow-son{
+	width:200px;
+	margin-top:40px;
+	padding-bottom:20px;
+	border-bottom:1px solid #ccc;
+	cursor:pointer;
+}
+.goodsShow-son .son-img{
+	width:200px;
+	height:200px:
+}
+.goodsShow-son .same-son{
+	width:200px;
+	height:16px;
+	font-size:16px;
+	line-height:16px;
+	text-align: center;	
+}
+.goodsShow-son .son-name{
+	color:#333;
+	margin-top:20px;
+}
+.goodsShow-son .son-price{
+	color:#ff3333;
+	margin-top:10px;
+}
+.details{
+	padding:40px 0 0 38px;
+	float:left;
+}
+.con1 .con1-father{
+	width:800px;
+	line-height:32px;
+	border-bottom:2px dotted #cecece;
+	font-size:16px;
+	color:#333;
+	overflow: hidden
+}
+.con1 .con1-father .con1-son1{
+	width:160px;
+	float:left;
+}
+.con1 .con1-father .con1-son2{
+	width:630px;
+	float:left;
+}
+.con2{
+	width:800px;
+	margin-top:22px;
+}
+.con2 .glass-name{
+	width:800px;
+	height:48px;
+	line-height:48px;
+	text-align: center;
+	color:#333;
+}
+.con2 .glass-pic{
+	width:800px;
+	height:320px;
+}
 
 
 
@@ -538,6 +881,7 @@ h1,h2,h3,h4,h5,h6{
 .footer0{
 	height:439px;
 	background:#fff;
+	margin-top:60px;
 }
 .footer0 .up{
 	width:1080px;
